P2/Arrays/01/var/archive/xmlreports/0/0/3/000127
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="127" judge-id="2" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>68f2afdb-c046-4dab-bbbe-2b2a0c1d741e</uuid>
  <compiler_output>000127.cpp:1:1: error: expected unqualified-id
/rightcode\
^
1 error generated.
</compiler_output>
</testing-report>
